--- a/price.html
+++ b/price.html
@@ -8,7 +8,7 @@
 
 	<meta name="description" content="" />
 	<link rel="icon" href="favicon.png"/>
-	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/price.css" />
 
 	<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -25,158 +25,228 @@
 					<nav class="ba-nav ba-float-right">
 						<ul class="ba-main-nav">
 							<li>
-								<a href="#">Головна</a>
+								<a href="index.html">Головна</a>
 							</li>
 							<li>
-								<a href="#team">Про нас</a>
+								<a href="index.html">Про нас</a>
 							</li>
 							<li>
-								<a href="#translate">Послуги</a>
+								<a href="index.html">Послуги</a>
 							</li>
 							<li>
-								<a href="#footer">Контакти</a>
+								<a href="index.html">Контакти</a>
 							</li>
 						</ul>
 					</nav>
 				</div>
 			</div>
-			<div class="ba-intro__info">
-				<div class="ba-container cf">
-					<div class="ba-intro__main">
-					 <h1 class="ba-intro__title">Вчасно,якісно,надійно</h1>
-					 <p class="ba-intro__subtitle">Ми-міжнародне бюро з перекладів,що надає послуги вже протягом 10 років</p>
-					 <a href="price.html" class="ba-button">Замовляй переклад</a>
-					</div>
-				</div>
-			</div>
+
 	</div>
 	<main>
-		<section class="ba-advantages">
+		<div class="ba-main">
 			<div class="ba-container">
-				<h2 class="ba-advantages__title">Наші переваги</h2>
+				<h2 class="ba-price__title">Ціни за переклад</h2>
 				<div class="ba-row">
-					<div class="ba-col-8">
-						<img src="img/three-women-in-office 1.png">
+					<div class="ba-col-6">
+						<div class="ba-price__box">
+							<div class="ba-price__img">
+								<img src="img/if_law_1312846.svg" alt="lawyer">
+							</div>
+							<div class="ba-price__info">
+								<h3 class="ba-price__subtitle">Юридичний переклад</h3>
+								<ul class="ba-advantages__list">
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>статутів,установчих документів;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>контрактів,договорів,угод;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>рішень Міжнародних та Арбітражних судів;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>документів оцінки майнових та немайнових прав;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>сертифікатів та документів,що відносяться до сфери авторського та патентного права;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>свідоцтв про народження,шлюб,розлучення тощо;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>заяв,довіреностей;</p>
+									</li>
+								</ul>
+								<p class="ba-price__options">Вартість від 150 грн</p>
+								<p class="ba-price__options2">Нотаріальна<br> довіренність від 100 грн</p>
+							</div>
+						</div>
+						<div class="ba-price__box--mod ba-price__box ">
+							<div class="ba-price__img">
+								<img src="img/if_growth_1312842.svg" alt="lawyer">
+							</div>
+							<div class="ba-price__info">
+								<h3 class="ba-price__subtitle">Технічний переклад</h3>
+								<ul class="ba-advantages__list">
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>технічного тексту з англійської,французької,німецької та ще;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>технічних інструкцій,мануалів;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>керівництва користувача;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>сертифікатів відповідності продукції;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>супроводжувальної технічної документації;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>креслень,інженерних планів,у том числі переклад креслень AutoCad.</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>науково технічних статей;</p>
+									</li>
+								</ul>
+								<p class="ba-price__options">Вартість від 150 грн</p>
+								<p class="ba-price__options2">Переклад носієм мови<br> від 250 грн</p>
+							</div>
+						</div>
+						<div class="ba-price__box--mod ba-price__box ">
+							<div class="ba-price__img">
+								<img src="img/if_money_1312850.svg" alt="lawyer">
+							</div>
+							<div class="ba-price__info">
+								<h3 class="ba-price__subtitle">Терміновий переклад</h3>
+								<ul class="ba-advantages__list">
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>документів для посольства(Київ);</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>договору,контракту сьогодні на сьогодні;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>технічний переклад і юридичний;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>"аржент срочний" переклад тендерної документації;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>інвойку,митної накладної(декларації);</p>
+									</li>
+								</ul>
+								<p class="ba-price__options">Вартість від 300 грн</p>
+							</div>
+						</div>
 					</div>
-					<div class="ba-col-4">
-						<div>
-							<ul class="ba-advantages__list">
-								<li>
-									<span class="ba-advantages__img"></span>
-									<p>Більше ніж 10 років на ринку</p>
-								</li>
-								<li>
-									<span class="ba-advantages__img"></span>
-									<p>Команда Професіоналів</p>
-								</li>
-								<li>
-									<span class="ba-advantages__img"></span>
-									<p>Оперативність</p>
-								</li>
-								<li>
-									<span class="ba-advantages__img"></span>
-									<p>Компетентність</p>
-								</li>
-								<li>
-									<span class="ba-advantages__img"></span>
-									<p>Індивідуальний підхід до клієнта</p>
-								</li>
-							</ul>
-							<a href="price.html" class="ba-button">Ціни за переклад</a>
+					<div class="ba-col-6 ba-mod">
+						<div class="ba-price__box">
+							<div class="ba-price__img">
+								<img src="img/if_document_1312835.svg" alt="book">
+							</div>
+							<div class="ba-price__info">
+								<h3 class="ba-price__subtitle">Літературний переклад</h3>
+								<ul class="ba-advantages__list">
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>крім художньої прози та поезії;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>науково-популярні статті та книги;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>епістолярні твори(листування,спогади діячів мистецтва,культури,політики і т.д.);</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>публіцистика(критика,літературознавство і т.д.);</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>реклама;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>аудіо метеріали.</p>
+									</li>
+								</ul>
+								<p class="ba-price__options">Вартість від 100 грн</p>
+
+							</div>
+						</div>
+						<div class="ba-price__box">
+							<div class="ba-price__img">
+								<img src="img/if_location_1312848.svg" alt="book">
+							</div>
+							<div class="ba-price__info">
+								<h3 class="ba-price__subtitle">Медичний переклад</h3>
+								<ul class="ba-advantages__list">
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>клінічних випробувань препаратів;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>реєстраційних документів медичних препаратів,обладнання та іншої продукції;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>ліцензій на фармацевтичну продукцію;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>сертифікатів якості на медичну продукцію;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>інструкцій до медичного обладнання;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>наукових статей у різних сферах медицини;</p>
+									</li>
+									<li>
+										<span class="ba-advantages__img"></span>
+										<p>довідок,історій хвороби;</p>
+									</li>
+								</ul>
+								<p class="ba-price__options">Вартість від 100 грн</p>
+
+							</div>
+						</div>
+						<div class="ba-woman">
+							<p class="ba-woman__title">Замовляй переклад</p>
+							<a href="tel:+38(066)-94-95-123">+38(066)-94-95-123</a>
 						</div>
 					</div>
 				</div>
 			</div>
-		</section>
-		<section id="translate" class="ba-translate">
-			<div class="ba-container">
-				<h2 class="ba-translate__title">Професійний переклад у будь-якій галузі</h2>
-				<div class="ba-row ba-row--mod">
-					<div class="ba-translate__box">
-						<img src="img/if_law_1312846.svg" alt="law1">
-						<p>Юридичний</p>
-					</div>
-					<div class="ba-translate__box">
-						<img src="img/if_document_1312835.svg" alt="law2">
-						<p>Літературний</p>
-					</div>
-					<div class="ba-translate__box">
-						<img src="img/if_growth_1312842.svg" alt="law3">
-						<p>Технічний</p>
-					</div>
-					<div class="ba-translate__box">
-						<img src="img/if_location_1312848.svg" alt="law4">
-						<p>Медичний</p>
-					</div>
-					<div class="ba-translate__box">
-						<img src="img/if_money_1312850.svg" alt="law5">
-						<p>Терміновий</p>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- /.ba-translate -->
-		<section id="team" class="ba-team">
-			<div class="ba-container ba-container--mod">
-				<h2 class="ba-team__title">Наша команда</h2>
-				<div class="ba-row ba-row--mod2">
-					<div class="ba-col-6 ba-col--woman">
-
-				</div>
-				<div class="ba-col-6 ba-col-4--mod">
-					<div class="ba-team__box">
-						<div class="ba-col-6">
-							<div class="ba-team__boxsmall">
-								<img src="img/wreath-award-circular-branches-symbol.svg" alt="branches">
-								<p>MATURA=95.4</p>
-							</div>
-							<div class="ba-team__boxsmall">
-								<img src="img/education.png" alt="education">
-								<p>Вища освіта</p>
-							</div>
-						</div>
-						<div class="ba-col-6">
-							<p class="ba-subtitle__info">Марія Головацька - директор і перекладач англійської та польскої мов. Закінчила Варшавський університет з дисципліни - переклад та менеджмент</p>
-						</div>
-					</div>
-					<div class="ba-team__box">
-						<div class="ba-col-6">
-							<div class="ba-team__boxsmall">
-								<img src="img/ielts.png" alt="ielts">
-								<p>IELTS exam-91.3</p>
-							</div>
-							<div class="ba-team__boxsmall">
-								<img src="img/education.png" alt="education">
-								<p>Вища освіта</p>
-							</div>
-						</div>
-						<div class="ba-col-6">
-							<p class="ba-subtitle__info">Валентина Науменко - перекладач ангійської,іспанської,італійської мов. Закінчила Харьківський університет Каразіна з дисципліни-переклад та педагогіка</p>
-						</div>
-					</div>
-					<div class="ba-team__box">
-						<div class="ba-col-6">
-							<div class="ba-team__boxsmall">
-								<img src="img/toefl.png" height="45" width="35" alt="toefl">
-								<p>TOEFL Exam-92.1</p>
-							</div>
-							<div class="ba-team__boxsmall">
-								<img src="img/education.png" alt="education">
-								<p>Вища освіта</p>
-							</div>
-						</div>
-						<div class="ba-col-6">
-							<p class="ba-subtitle__info">Софія Коробкова-перекладач англійської,німецької та французької мов. Закінчила Київський національний університет імені І.Франка с дисципліни-переклад</p>
-						</div>
-					</div>
-				</div>
-				</div>
-
-			</div>
-
-		</section>
+		</div>
 	</main>
-	<div id="footer" class="ba-footer">
+	<div class="ba-footer">
 			<div class="ba-container">
 				<div class="ba-footer__wrap">
 					<a href="#" class="ba-copyright">@2018</a>
